# hivemind

./: .dockerignore  .env.example  .gitignore  .mcp.json  .ubsignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  PRINCIPLES.md  README.md  STRATEGY.md  VISION.md  docker-compose.yml  fly.toml
.agents/plugins/: marketplace.json
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.cargo/: audit.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/commands/: capture-decision.md
.claude/scripts/: capture-decision.sh
.github/workflows/: ci.yml  deploy-hosted.yml  deploy-website.yml  release.yml
auth-service/: package.json
auth-service/src/: index.js
benchmarks/decision_graph/: SPEC.md
benchmarks/fidelity/: ab-eval-scorecard-tier1.5-2026-07-16.txt  ab-eval-scorecard-v1-phase1-2026-07-13.txt  corpus.yaml  main.rs  scorecard-v0-ceiling-2026-06-20.txt  scorecard-v1-ceiling-2026-06-21.txt  scorecard-v2-ceiling-2026-06-21.txt  scorecard-v3-ceiling-2026-07-13.txt
benchmarks/fidelity/ab-eval/: main.rs
benchmarks/misalignment/: README.md  corpus.yaml  main.rs
capture/: core.py  hook_ship.py  sidecar.py
capture/tests/: test_core.py
clients/mcp-gateway/: package-lock.json  package.json  tsconfig.json
clients/mcp-gateway/src/: client.ts  index.ts
clients/mcp-gateway/test/: gateway.test.ts
demos/showcase/: README.md  corpus.yaml  load_showcase.py  load_showcase.sh
docs/: AGENT_DECISION_CAPTURE.md  ARCHITECTURE.md  AUTH_MODEL.md  CAPTURE_CLASSIFIER.md  CAPTURE_FRICTION_AUDIT_2026-05-24.md  COMPACTIFICATION_SPEC.md  DECISION_EVENT_GRANULARITY_STUDY.md  DECISION_QUALITY_LITERATURE.md  DECISION_SCORING.md  DECISION_SEARCH_QUERY.md  DEPLOYMENT.md  DOGFOOD.md  HTTP_API.md  HUMAN_DECISION_BLOCKER_NOTIFICATIONS.md  HUMAN_LEDGER_QUERY_EXPERIENCE.md  INGESTION_CONNECTORS.md  INTEGRATIONS.md  KEYLESS_CAPTURE.md  LOCAL_CAPTURE_DEMO.md  M2_VERIFICATION.md  M2_WEEKLY_DIFF_DEMO.md  MCP_SERVICE_SPLIT.md  MULTI_TENANCY.md  QUALITY_GATES.md  REMOTE_DB.md  SEARCH_DESIGN.md  SELF_HOSTING.md  SHARED_LEDGER_WAL.md  SLACK_APP.md  TEXT_IMPORT_AND_DIFF_SEMANTICS.md  TUI_REQUIREMENTS.md
docs/deploy/: workos-setup.md
docs/design/: auth-requirements.md
docs/review/: fidelity-gold-2nd-eyes.md
dogfood/2026-06-19-mayor-session/: emit_captures.sh  extract_chunks.py  filter_chunks.py  signal-vs-noise-readout.md
plugins/hivemind-capture/: .mcp.json  README.md
plugins/hivemind-capture/.claude-plugin/: plugin.json
plugins/hivemind-capture/.codex-plugin/: plugin.json
plugins/hivemind-capture/commands/: batch-capture.md  capture-decision.md  capture.md  classify-queue.md  query-decisions.md
plugins/hivemind-capture/scripts/: capture-decision.sh  capture.sh  check-classify-queue.sh  install-active-capture-skill.sh  query-decisions.sh
schemas/v0/: blocker.reported.json  blocker.resolved.json  decision.accepted.json  decision.metadata_derived.json  decision.proposed.json  decision.rejected.json  decision.requested.json  decision.scored.json  decision.superseded.json  evidence.recorded.json  hypothesis.recorded.json  ingest.batch_classified.json  ingest.batch_received.json  notification.acknowledged.json  notification.sent.json  relation.added.json  relation.removed.json
scripts/: install-mcp.sh  install.sh
snapshots/golden/: get_decision.json  recent_decisions_empty.json  search_actor_filter.json  search_empty_page.json  search_evidence_text.json  search_hypothesis_text.json  search_option_text.json  search_truncated.json
src/: api.rs  classifier.rs  embedding.rs  error.rs  events.rs  http.rs  identity.rs  ingest.rs  lib.rs  main.rs  map.rs  mcp.rs  oauth.rs  scorer.rs  slack_app.rs  suggest.rs  summarize.rs  tui.rs
src/cli/: migrate.rs  mod.rs  tests.rs
src/commands/: mod.rs  tests.rs
src/connector/: mod.rs  tests.rs
src/error/: tests.rs
src/events/: tests.rs
src/http/: tests.rs
src/ingest/: tests.rs
src/ledger/: backend_error.rs  contract_tests.rs  memory.rs  mod.rs
src/ledger/memory/: tests.rs
src/ledger/postgres/: mod.rs  tenant_store.rs  tests.rs
src/ledger/sqlite/: mod.rs  row.rs  tests.rs
src/mcp/: tests.rs
src/projector/: kuzu.rs  memory.rs  mod.rs  postgres.rs  tests.rs
src/projector/kuzu/: tests.rs
src/projector/postgres/: tests.rs
src/queries/: active_blockers.rs  compact_view.rs  decision.rs  history.rs  mod.rs  neighborhood.rs  relevant.rs  search.rs  shared.rs  status.rs  supersession.rs  tests.rs
src/queries/history/: tests.rs
src/slack_app/: tests.rs
src/tui/: tests.rs
tests/: api.rs  codex_capture_plugin_distribution.rs  full_text_search.rs  golden.rs  local_capture_demo.rs  local_import_weekly_diff_demo.rs  mcp_stdio_e2e.rs  migrate.rs  multi_tenant.rs  multi_tenant_fixtures.rs  organizational_scenarios.rs  science_scenario.rs  seed.rs  slack_app.rs  sqlite_wal_multiprocess.rs  type_contracts.rs
tests/fixtures/documents/: import_report.txt  storage_decision.md
tests/fixtures/slack/: thread_with_mention.json  thread_without_mention.json
tests/fixtures/v0/: blocker.reported.json  blocker.resolved.json  decision.accepted.json  decision.metadata_derived.json  decision.proposed.json  decision.rejected.json  decision.requested.json  decision.scored.json  decision.superseded.json  evidence.recorded.json  hypothesis.recorded.json  ingest.batch_classified.json  ingest.batch_received.json  notification.acknowledged.json  notification.sent.json  relation.added.json  relation.removed.json
tests/organizational_scenarios/: README.md
tests/seed/: README.md
tests/snapshots/golden/: get_decision_neighborhood_branchy_supersession.json  recent_decisions.json  (+7 more)
tests/support/: multi_tenant.rs  organizational_scenarios.rs  seed_data.rs
website/: astro.config.mjs  package-lock.json  package.json
(+102 files in other folders)
