[package]
name = "hivemind"
version = "0.1.0"
edition = "2021"

[lib]
name = "hivemind"
path = "src/lib.rs"

[features]
default = []
graph-kuzu = ["dep:kuzu"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
deunicode = "1.6.2"
kuzu = { version = "0.11.3", optional = true }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["serde", "v4", "v5"] }

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }
proptest = { version = "1.9.0", default-features = false, features = ["std"] }

[[test]]
name = "golden"
path = "tests/golden.rs"
harness = false
