[package]
name = "hivemind"
version = "0.1.0"
edition = "2021"
description = "Organizational decision-memory ledger and query CLI"
repository = "https://github.com/alexknips/hivemind"
homepage = "https://github.com/alexknips/hivemind"
documentation = "https://github.com/alexknips/hivemind#readme"
readme = "README.md"
license-file = "LICENSE"
keywords = ["decision", "ledger", "cli", "agents", "provenance"]
categories = ["command-line-utilities"]
publish = false

[lib]
name = "hivemind"
path = "src/lib.rs"

[[bin]]
name = "hivemind"
path = "src/main.rs"

[features]
default = []
graph-kuzu = ["dep:kuzu", "dep:cxx-build"]
tui = ["dep:crossterm", "dep:ratatui"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = { version = "0.28.1", optional = true }
deunicode = "1.6.2"
# kuzu 0.11.3 depends on cxx 1.0.138 but allows newer cxx-build generators.
# Keep the generated bridge symbols aligned with kuzu's runtime cxx crate.
cxx-build = { version = "=1.0.138", optional = true }
kuzu = { version = "0.11.3", optional = true }
ratatui = { version = "0.29.0", optional = true }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["serde", "v4", "v5"] }

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }
proptest = { version = "1.9.0", default-features = false, features = ["std"] }

[[test]]
name = "golden"
path = "tests/golden.rs"
harness = false
