[package]
name = "hivemind"
version = "0.4.0"
edition = "2021"
description = "Organizational decision-memory ledger and query CLI"
repository = "https://github.com/alexknips/hivemind"
homepage = "https://github.com/alexknips/hivemind"
documentation = "https://github.com/alexknips/hivemind#readme"
readme = "README.md"
license-file = "LICENSE"
keywords = ["decision", "ledger", "cli", "agents", "provenance"]
categories = ["command-line-utilities"]
publish = false

[lib]
name = "hivemind"
path = "src/lib.rs"

[[bin]]
name = "hivemind"
path = "src/main.rs"

[[bin]]
name = "fidelity-eval"
path = "benchmarks/fidelity/main.rs"

[[bin]]
name = "ab-eval"
path = "benchmarks/fidelity/ab-eval/main.rs"

[features]
default = []
graph-kuzu = ["dep:kuzu", "dep:cxx-build"]
semantic = []
shared-backend-postgres = ["dep:postgres", "dep:r2d2", "dep:r2d2_postgres", "dep:native-tls", "dep:postgres-native-tls"]
tui = ["dep:crossterm", "dep:ratatui"]

[dependencies]
axum = "0.8"
clap = { version = "4.6.1", features = ["derive", "env"] }
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = { version = "0.28.1", optional = true }
deunicode = "1.6.2"
pdf-extract = "0.12.0"
postgres = { version = "0.19.13", optional = true, features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
# kuzu 0.11.3 depends on cxx 1.0.138 but allows newer cxx-build generators.
# Keep the generated bridge symbols aligned with kuzu's runtime cxx crate.
cxx-build = { version = "=1.0.138", optional = true }
kuzu = { version = "0.11.3", optional = true }
r2d2 = { version = "0.8.10", optional = true }
r2d2_postgres = { version = "0.18.2", optional = true }
native-tls = { version = "0.2", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
ratatui = { version = "0.29.0", optional = true }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["serde", "v4", "v5"] }
nalgebra = "0.33"
fastembed = { version = "5.17.2", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }

[dev-dependencies]
http-body-util = "0.1"
jsonschema = { version = "0.46.5", default-features = false }
proptest = { version = "1.9.0", default-features = false, features = ["std"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[test]]
name = "golden"
path = "tests/golden.rs"
harness = false

[[test]]
name = "api"
path = "tests/api.rs"

[[test]]
name = "migrate"
path = "tests/migrate.rs"
required-features = ["shared-backend-postgres"]
